--- a/nginx.conf
+++ b/nginx.conf
@@ -16,8 +16,9 @@ server {
     # AQUI ESTÁ A MÁGICA DO PROXY DE PRODUÇÃO
     # Qualquer requisição que comece com /api/ será redirecionada.
     location /api/ {
-        # O endereço da sua API de verdade
-        proxy_pass https://cinexapi.ingressocinex.com.br/api/;
+        # Apontando para o serviço interno do Kubernetes
+        # Substitua 'cinexapi-service' e a porta '8080' se forem diferentes
+        proxy_pass http://cinexapi-service:8080/api/;
 
         # Cabeçalhos importantes para o proxy funcionar corretamente
         proxy_set_header Host $host;
