--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,7 @@ server {
     location /api/ {
         # Apontando para o serviço interno do Kubernetes
         # Substitua 'cinexapi-service' e a porta '8080' se forem diferentes
+        resolver kube-dns.kube-system.svc.cluster.local;
         proxy_pass http://cinexapi-service:8080/api/;
 
         # Cabeçalhos importantes para o proxy funcionar corretamente
